--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@material-ui/core": "^4.9.1",
+    "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -22,7 +22,8 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
     "react-textarea-autosize": "^7.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
